--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@covalent/core": "^1.0.0-rc.4",
     "angular2-token": "^0.2.0-beta.11",
     "core-js": "^2.4.1",
+    "ng-block-ui": "^1.0.0-beta.18",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
