--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "@covalent/core": "^1.0.0-rc.4",
+    "angular2-text-mask": "^8.0.4",
     "angular2-token": "^0.2.0-beta.11",
     "core-js": "^2.4.1",
     "ng-block-ui": "^1.0.0-beta.18",
