--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@angular/router": "^5.0.0",
     "@covalent/core": "^1.0.0-rc.4",
     "angular2-text-mask": "^8.0.4",
-    "angular2-token": "^0.2.0-beta.11",
+    "chart.js": "^2.7.1",
+    "chartjs": "^0.3.24",
     "core-js": "^2.4.1",
     "ng-block-ui": "^1.0.0-beta.18",
     "rxjs": "^5.5.2",
